<resources>
    <string name="app_name">Kotlin Chat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="generate_avatar">Tap to generate user avatar</string>
    <string name="generate_background_color">Generate background color</string>
    <string name="enter_username">Enter username</string>
</resources>
